--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
     background: #ede9cc;
     margin: 0 auto;
     min-width: 720px;
-    max-width: 1120px;
+    max-width: 1180px;
 }
 
 /* Elemento com id "topo" */
@@ -36,6 +36,23 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    /* 
+    Propriedade diz qual conteúdo aparece primeiro que o outro,
+    dando o efeito de ordem de empilhamento, elemento sobre o outro. 
+    */
+    z-index: 1;
+}
+
+/* Elemento <a> dentro de um elemento com a classe "logo" */
+.logo a{
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    z-index: 3;
+    background: url(../imagens/logo.png) no-repeat;
+    width: 150px;
+    height: 65px;
+    text-indent: -5000px;
 }
 
 /* Elemento com id "area-menu" */
@@ -47,4 +64,5 @@ body{
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 2;
 }
