--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,28 @@ body{
 
 }
 
+/* Elemento com id "menu-locais" */
 #menu-locais{
     border-top: 1px solid #b5ab56;
     border-bottom: 1px solid #b5ab56;
-    padding: 5px 0 5px 0;
+    padding: 8px 0 8px 0;
     font-size: 0.7em;
     color: #8b8448;
+}
+
+/* Elemento com classe "locais dentro de um elemento com id "menu-locais"*/
+#menu-locais.locais{
+    float: left;
+}
+
+/* Elemento <a> com classe "reservar"*/
+a.reservar{
+    text-transform: uppercase;
+    background: #a29750;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #fff5b0;
+    padding: 5px 10px;
+    margin-left: 30px;
 }
 
