--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a.reservar{
 
 /* Elemento com id "barra-navegacao-menu" */
 #barra-navegacao-menu{
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 ul{
@@ -132,6 +132,7 @@ ul#navegacao a:hover{
     background: #ede7b2;
 }
 
+/* Elemento com classe "logo" */
 .logo-II{
     float: right;
     width: 210px;
