--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body{
     position: relative;
 }
 
+/* AREA DO LOGO */
+
 /* Elemento com id "area-logo" */
 #area-logo{
     background: blue;
@@ -54,6 +56,8 @@ body{
     height: 65px;
     text-indent: -5000px;
 }
+
+/* AREA DO MENU */
 
 /* Elemento com id "area-menu" */
 #area-menu{
@@ -130,13 +134,6 @@ ul#navegacao a{
 /* Elemento <a> em estado de hover, dentro de elemento <ul> com id "navegacao" */
 ul#navegacao a:hover{
     background: #ede7b2;
-}
-
-/* Elemento com classe "logo" */
-.logo-II{
-    float: right;
-    width: 210px;
-    height: 164px;
 }
 
 /* AREA DO CONTEÚDO PRINCIPAL */
