--- a/css/style.css
+++ b/css/style.css
@@ -174,15 +174,15 @@ ul#navegacao a:hover{
 
 /* AREA DO CONTEÚDO LATERAL */
 
-/* Elemento <li> dentro de elemento com id "area-lateral" */
-#area-lateral li{
+/* Elemento <li> dentro de elemento com id "beneficios" */
+#beneficios li{
     height: 8em;
     padding: 10px;
     border-bottom: 1px solid #fff;
 }
 
-/* Elemento <li> em estado de hover dentro de elemento com id "area-lateral" */
-#area-lateral li:hover{
+/* Elemento <li> em estado de hover dentro de elemento com id "beneficios" */
+#beneficios li:hover{
     background: #fff;
 }
 
@@ -194,15 +194,15 @@ ul#navegacao a:hover{
     margin-right: 10px;
 }
 
-/* Elemento <h3> dentro de elemento com id "area-lateral" */
-#area-lateral h3{
+/* Elemento <h3> dentro de elemento com id "beneficios" */
+#beneficios h3{
     font-size: 1.1em;
     color: #7d7640;
     margin: 5px;
 }
 
-/* Elemento <a> dentro de elemento com id "area-lateral" */
-#area-lateral a{
+/* Elemento <a> dentro de elemento com id "beneficios" */
+#beneficios a{
     text-decoration: none;
     font-size: 0.9em;
     color: #000;
